laid out basics of html file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <section>
+      <header id="header">Jose Rosas</header>
+      <nav id="nav">
+        <ul>
+          <li>About Me</li>
+          <li>Work</li>
+          <li>Contact Me</li>
+          <li>Resume</li>
+        </ul>
+      </nav>
+      <hero>Welcome to my page!</hero>
+    </section>
+
+    <section id="main">
+      <section id="aboutMe">
+        <h1>About Me</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis
+          suscipit nam recusandae reprehenderit dignissimos maxime, facere ut id
+          dolorum, beatae minus asperiores animi ullam aut, reiciendis sint
+          consectetur illum illo?
+        </p>
+      </section>
+      <section id="work">
+        <h1>Work</h1>
+        <img src="" alt="">
+      </section>
+    </section>
+    <footer id="footer">
+      <a id="phone" href="">555-555-5555</a>
+      <a id="email" href="">josejrrosas@yahoo.com</a>
+      <a id="github" href="">Github</a>
+      <a id="twitter" href="">Twitter</a>
+      <a id="spotify" href="">Spotify</a>
+    </footer>
+  </body>
 </html>
