added css root colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section>
-      <header id="header">Jose Rosas</header>
+      <h1 id="header">Jose Rosas</h1>
       <nav id="nav">
         <ul>
           <li>About Me</li>
