--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="app.css" />
     <title>Resume</title>
   </head>
   <body>
@@ -12,36 +12,43 @@
       <h1 id="header">Jose Rosas</h1>
       <nav id="nav">
         <ul>
-          <li>About Me</li>
-          <li>Work</li>
-          <li>Contact Me</li>
-          <li>Resume</li>
+          <li><a href="#aboutMe">About Me</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#footer">Contact</a></li>
+          <li><a href="">Resume</a></li>
         </ul>
       </nav>
-      <hero>Welcome to my page!</hero>
+      <div id="hero">Welcome to my page!</div>
     </section>
 
     <section id="main">
       <section id="aboutMe">
         <h1>About Me</h1>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis
-          suscipit nam recusandae reprehenderit dignissimos maxime, facere ut id
-          dolorum, beatae minus asperiores animi ullam aut, reiciendis sint
-          consectetur illum illo?
+          Graduate with a Bachelor of Science in Information Systems from the
+          University of Texas at Arlington. Full Stack Web Development Bootcamp
+          from Southern Methodist University Graduate with newly developed
+          skills in HTML, JavaScript, CSS, and responsive web design. Having a
+          passion for problem solving, I am determined to get my work done and
+          use communication to make sure everyone is on the right path to
+          achieve that. I am excited to use my new found skills and my passion
+          for learning to begin a new opportunity in an industry that can
+          benefit me as much as I can benefit it.
         </p>
       </section>
+
       <section id="work">
         <h1>Work</h1>
-        <img src="" alt="">
+        <img src="" alt="" />
+      </section>
+
+      <section id="footer">
+        <a id="phone" href="">555-555-5555</a>
+        <a id="email" href="">josejrrosas@yahoo.com</a>
+        <a id="github" href="">Github</a>
+        <a id="twitter" href="">Twitter</a>
+        <a id="spotify" href="">Spotify</a>
       </section>
     </section>
-    <footer id="footer">
-      <a id="phone" href="">555-555-5555</a>
-      <a id="email" href="">josejrrosas@yahoo.com</a>
-      <a id="github" href="">Github</a>
-      <a id="twitter" href="">Twitter</a>
-      <a id="spotify" href="">Spotify</a>
-    </footer>
   </body>
 </html>
