--- a/index.html
+++ b/index.html
@@ -39,7 +39,41 @@
 
       <section id="work">
         <h1>Work</h1>
-        <img src="" alt="" />
+        <div class="port">
+          <img class="portfilio1" src="./Assets/02-portfolio-1.jpg" alt="" />
+          <div class = 'projName'>
+            <h3>Surf Report</h3>
+            <p>MERN Stack</p>
+          </div>
+        </div>
+        <div class="port">
+          <img class="portfilio" src="./Assets/02-portfolio-2.jpg" alt="" />
+          <div class = 'projName'>
+            <h3>LED Wall</h3>
+            <p>Node/IoT</p>
+          </div>
+        </div>
+        <div class="port">
+          <img class="portfilio" src="./Assets/02-portfolio-3.jpg" alt="" />
+          <div class = 'projName'>
+            <h3>Calculator</h3>
+            <p>React/JavaScript/Css</p>
+          </div>
+        </div>
+        <div class="port">
+          <img class="portfilio" src="./Assets/02-portfolio-4.jpg" alt="" />
+          <div class = 'projName'>
+            <h3>Pastel Puzzels</h3>
+            <p>MERN Stack</p>
+          </div>
+        </div>
+        <div class="port">
+          <img class="portfilio" src="./Assets/02-run-buddy.jpg" alt="" />
+          <div class = 'projName'>
+            <h3>Run Buddy</h3>
+            <p>HTML/CSS</p>
+          </div>
+        </div>
       </section>
 
       <section id="footer">
